--- a/style.css
+++ b/style.css
@@ -56,9 +56,20 @@ body {
 h1 {
     color: white;
     z-index: 3;
-    font-size: 23px;
+    font-size: 22px;
     position: relative;
-    top: -490px;
+    top: -480px;
+    left: 9px;
+}
+
+h15 {
+    color: white;
+    z-index: 3;
+    font-size: 22px;
+    font-weight: 600;
+    position: relative;
+    top: -519.3px;
+    left: 228px;
 }
 
 span3 {
@@ -77,6 +88,7 @@ hr {
     position: absolute;
     width: 385px;
     top: 105px;
+    left: 11px;
 }
 
 h4 {
@@ -222,13 +234,13 @@ i3 {
     top: 11px;
 }
 
+/* Đường Kẻ */
 h8 {
     color: white;
     z-index: 2;
     position: absolute;
-    width: 349px;
+    width: 410px;
     top: 500px;
-    left: 11px;
 }
 
 /* Chỉnh Cert*/
@@ -274,6 +286,7 @@ input4{
 
 input6 {
     display: block;
+    z-index: 2;
     position: absolute;
     width: 86.3px;
     height: 48px;
@@ -287,8 +300,8 @@ input6 {
 
 input6{
     position: relative;
-    right: 120px;
-    top: -18px;
+    right: 188px;
+    top: 186.5px;
 }
 
 .item-media2 .app-icon {
@@ -296,15 +309,16 @@ input6{
     z-index: 2;
     position: absolute;
     left: 22.7px;
-    top: 4.5px;
+    top: 5px;
     max-width: 38px;
     border-radius: 20%;
 }
 
 /* Scarlet*/
 
-input7 {
+input7{
     display: block;
+    z-index: 2;
     position: absolute;
     width: 86.3px;
     height: 48px;
@@ -316,39 +330,41 @@ input7 {
     border-radius: 15px;
 }
 
-input7{
+input7 {
     position: relative;
-    left: 117px;
-    top: -66px;
+    right: 39px;
+    top: 187px;
 }
 
 .item-media3 .app-icon {
     width: 38px;
     z-index: 2;
     position: absolute;
-    left: 22.7px;
+    left: 23.8px;
     top: 4.5px;
     max-width: 38px;
     border-radius: 20%;
 }
 
+/* Đường Kẻ */
 h9 {
     color: white;
     z-index: 2;
     position: absolute;
     right: 205px;
-    top: 80px;
-    left: -145px;
+    top: 770px;
+    left: 0px;
 }
 
+/* iPA Free */
 h11 {
     color: white;
     z-index: 2;
     position: absolute;
     font-size: 21px;
     font-weight: 999;
-    top: 71px;
-    left: 4.5px;
+    top: 760px;
+    left: 161px;
 }
 
 input5 {
@@ -384,8 +400,8 @@ h12 {
     position: absolute;
     font-size: 25px;
     font-weight: 999;
-    top: 212px;
-    left: -1px;
+    top: 905px;
+    left: 153px;
 }
 
 i6 {
@@ -448,13 +464,14 @@ a {
 
 p {
     position: absolute;
-    left: -123px;
+    left: -175px;
     top: -12px;
 }
 
 p1 {
+    display: block;
     position: absolute;
-    left: -150px;
+    left: -200px;
     top: 28px;
 }
 
@@ -462,8 +479,8 @@ footer {
     color: white;
     z-index: 2;
     position: relative;
-    top: 300px;
-    left: 97px;
+    top: 470px;
+    left: 78px;
     font-size: 16px;
 }
 
