--- a/style.css
+++ b/style.css
@@ -1,10 +1,143 @@
-body {
-    background-color: black;
-  position: absolute;
-  left: -5.4px;
-  top: -5px;
+/*header*/
+.text {
+    position: relative;
+    top: 12px;
+    left: 3px;
+    font-size: 23px;
+    font-weight: bolder;
+    background: linear-gradient(70deg,#ff0000,#42dde2);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
+
+nav {
+    background-image: url(image/sasuke.jpg);
+    background-size: 405px;
+    position: relative;
+    top: 2px
+}
+
+
+/*trang chu*/
+ul li1 a {
+    color: white;
+    text-transform: uppercase;
+    list-style: none;
+    position: relative;
+    left: 12.2px;
+    top: 67px;
+}
+
+/*Menu*/
+li2{
+    color: white;
+    font-weight: 70px;
+    font-size: 20px;
+    text-transform: uppercase;
+    list-style: none;
+    position: relative;
+    left: 31.5px;
+    top: -103px;
+}
+/*hadz*/
+li3{
+    color: white;
+    font-weight: 70px;
+    text-transform: uppercase;
+    list-style: none;
+    position: relative;
+    right: 24px;
+    top: 2.5px;
+}
+
+
+ul li a{
+    color: white;
+    text-transform: uppercase;
+    position: relative;
+    top: 39px;
+    left: 4px;
+}
+
+ul hr {
+    position: relative;
+    width: 197px;
+    top: -36px;
+    right: 40px;
+    
+}
+
+b hr {
+    position: relative;
+    width: 197px;
+    top: -128px;    
+}
+
+.hamburger {
+    display: none;
+    cursor: pointer;
+    z-index: 4;
+}
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    position: relative;
+    left: 180px;
+    top: -15px;
+    -webkit-transition: all 0.3 ease-in-out;
+    transition: all 0.3 ease-in-out;
+    background-color: white;
+}
+
+@media(max-width:768px) {
+    .hamburger {
+        display: block;
+}
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+}
+    .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+}
+    .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+}
+}
+/*menu*/
+.nav-menu {
+    z-index: 4;
+    position: fixed;
+    left: 608px;
+    top: 45px;
+    width: 160px;
+    height: 19%;
+    gap: 0;
+    border-radius: 5%;
+    flex-direction: column;
+    background-color: transparent;
+    backdrop-filter: blur(30px);
+    transition: 1.5s;
+}
+
+.nav-item {
+    margin: 40px 0;
+    list-style: none;
+}
+
+.nav-menu.active {
+    left: 107px;
+}
+
+body {
+    background-color: rgb(0, 0, 0);
+  position: absolute;
+  left: -6px;
+  top: -7px;
+}
 .box {
     position: relative;
     width: 410px;
@@ -56,20 +189,9 @@ body {
 h1 {
     color: white;
     z-index: 3;
-    font-size: 22px;
+    font-size: 23px;
     position: relative;
-    top: -480px;
-    left: 9px;
-}
-
-h15 {
-    color: white;
-    z-index: 3;
-    font-size: 22px;
-    font-weight: 600;
-    position: relative;
-    top: -519.3px;
-    left: 228px;
+    top: -490px;
 }
 
 span3 {
@@ -88,7 +210,6 @@ hr {
     position: absolute;
     width: 385px;
     top: 105px;
-    left: 11px;
 }
 
 h4 {
@@ -234,13 +355,13 @@ i3 {
     top: 11px;
 }
 
-/* Đường Kẻ */
 h8 {
     color: white;
     z-index: 2;
     position: absolute;
-    width: 410px;
+    width: 349px;
     top: 500px;
+    left: 11px;
 }
 
 /* Chỉnh Cert*/
@@ -278,7 +399,7 @@ input4{
     z-index: 2;
     position: absolute;
     left: 23.5px;
-    top: 5.5px;
+    top: 7px;
     max-width: 50%;
 }
 
@@ -286,7 +407,6 @@ input4{
 
 input6 {
     display: block;
-    z-index: 2;
     position: absolute;
     width: 86.3px;
     height: 48px;
@@ -300,8 +420,8 @@ input6 {
 
 input6{
     position: relative;
-    right: 188px;
-    top: 187.5px;
+    right: 120px;
+    top: -18px;
 }
 
 .item-media2 .app-icon {
@@ -309,16 +429,15 @@ input6{
     z-index: 2;
     position: absolute;
     left: 22.7px;
-    top: 5px;
+    top: 4.5px;
     max-width: 38px;
     border-radius: 20%;
 }
 
 /* Scarlet*/
 
-input7{
+input7 {
     display: block;
-    z-index: 2;
     position: absolute;
     width: 86.3px;
     height: 48px;
@@ -330,10 +449,10 @@ input7{
     border-radius: 15px;
 }
 
-input7 {
+input7{
     position: relative;
-    right: 39px;
-    top: 187.5px;
+    left: 117px;
+    top: -66px;
 }
 
 .item-media3 .app-icon {
@@ -341,30 +460,28 @@ input7 {
     z-index: 2;
     position: absolute;
     left: 22.7px;
-    top: 5px;
+    top: 4.5px;
     max-width: 38px;
     border-radius: 20%;
 }
 
-/* Đường Kẻ */
 h9 {
     color: white;
     z-index: 2;
     position: absolute;
     right: 205px;
-    top: 770px;
-    left: 0px;
+    top: 80px;
+    left: -145px;
 }
 
-/* iPA Free */
 h11 {
     color: white;
     z-index: 2;
     position: absolute;
     font-size: 21px;
     font-weight: 999;
-    top: 760px;
-    left: 161px;
+    top: 71px;
+    left: 4.5px;
 }
 
 input5 {
@@ -400,8 +517,8 @@ h12 {
     position: absolute;
     font-size: 25px;
     font-weight: 999;
-    top: 905px;
-    left: 153px;
+    top: 212px;
+    left: -1px;
 }
 
 i6 {
@@ -464,14 +581,13 @@ a {
 
 p {
     position: absolute;
-    left: -175px;
+    left: -123px;
     top: -12px;
 }
 
 p1 {
-    display: block;
     position: absolute;
-    left: -200px;
+    left: -150px;
     top: 28px;
 }
 
@@ -479,8 +595,8 @@ footer {
     color: white;
     z-index: 2;
     position: relative;
-    top: 470px;
-    left: 78px;
+    top: 300px;
+    left: 97px;
     font-size: 16px;
 }
 
@@ -516,7 +632,7 @@ footer {
     visibility: hidden;
     transform: translateY(15px);
     -webkit-transition: all 200ms linear;
-    transition: all 200ms linear; 
+    transition: all 200ms linear;
   }
   
   .progress-wrap.active-progress {
