--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 nav {
     background-image: url(image/sasuke.jpg);
-    background-size: 405px;
+    background-size: 409px;
     position: relative;
     top: 2px
 }
@@ -120,10 +120,13 @@ b hr {
     top: 48px;
     width: 160px;
     height: 24.8%;
+    gap: 0;
     border-radius: 5%;
+    flex-direction: column;
     background-image: url(image/Anime\ Menu.jpg);
     background-size: 500px;
     transition: 1.5s;
+    padding: auto;
 }
 
 .nav-item {
@@ -199,7 +202,7 @@ h1 {
 
 span3 {
     position: relative;
-    right: 146px;
+    right: 150px;
     top: 45px;
     color: #ff0000;
     display: block;
