--- a/Web Key Spam SmS/webkey.css
+++ b/Web Key Spam SmS/webkey.css
@@ -1,240 +1,74 @@
-/*header*/
-.text {
-    position: relative;
-    top: 12px;
-    left: 5px;
-    font-size: 23px;
-    font-weight: bolder;
-    background: linear-gradient(70deg,#ff0000,#42dde2);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no">    
+    <title>Key Spam SmS</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link rel="stylesheet" href="webkey.css">
+</head>
+<body>
+    <header>
+        <nav class="navbar">
+            <h15 class="text"><a href="#">Key Spam SmS</a></i></h15>
 
-nav {
-    background-image: url(image/sasuke.jpg);
-    background-size: 410px;
-    position: relative;
-    top: -8px;
-    right: 9px;
-    width: 410px;
-}
+        <ul class="nav-menu">
+            <li1 class="nav-item">
+                <a href="/index.html" class="nav-link">Trang Chủ</a></li1>
+            <li class="nav-item">
+                <a href="webkey.html" class="nav-link">Key Spam SmS</a></li>
+            <li2>Menu</li2>
+            <li3>HoangAnh_DepTrai</li3>
+                <hr>
+                <b>
+                    <hr>
+                </b>    
+        </ul>        
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+</nav>
+</header>
+<script src="webkey.js"></script>
 
+    <h1>Key Spam SmS┊Call</h1>
+    <div id="site-title">
+        <span3 class="blogtitle"><h2 class="text2">Manh Ti3n</h2></span3><span class="typed-cursor">|</span><span3 class="typed-cursor typed-cursor--blink">|</span3>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+        <script>
+            var typed = new Typed(".blogtitle", {
+                strings: ['<h2 class="text2">Hoang Anh</h2>', '<h2 class="text2">Hoang Anh</h2>'],
+                startDelay: 200,
+                typeSpeed: 100,
+                loop: true,
+                backSpeed: 190,
+                showCursor: true
+            });
+        </script>
+    </div>
+        <hr>
+        <h3>Cảm ơn bạn đã vượt Link</h3>
+        <h4>Đây là Key của bạn.!</h4>
+<div class="copyfield">
+    <span id="link">9536a46136ddf421453e5c2a42fed99</span>
+    <span id="copy-btn">Copy</span>
+</div>
 
-/*trang chu*/
-ul li1 a {
-    color: rgb(255, 255, 255);
-    font-size: 18px;
-    font-weight: 1000;
-    list-style: none;
-    text-decoration: none;
-    position: relative;
-    left: 15.2px;
-    top: 66px;
+<script>
+var copybtn = document.getElementById("copy-btn");
+var link = document.getElementById("link");
+copybtn.onclick = function () {
+    navigator.clipboard.writeText(link.innerHTML);
+    copybtn.innerHTML = "Copied"
+    setTimeout(function (){
+        copybtn.innerHTML = "Copy"
+    }, 2000)
 }
-
-/*Menu*/
-li2{
-    color: rgb(255, 255, 255);
-    font-weight: 1000;
-    font-size: 22px;
-    list-style: none;
-    position: relative;
-    left: 31.7px;
-    top: -111px;
-}
-
-
-/*hr HoangAnh*/
-ul hr {
-    position: relative;
-    width: 197px;
-    top: -47px;
-    right: 38px;
-    
-}
-
-/*hadz*/
-li3{
-    color: rgb(255, 255, 255);
-    font-weight: 1000;
-    font-size: 20px;
-    list-style: none;
-    position: relative;
-    right: 25px;
-    top: -7px;
-}
-
-/*Keysms*/
-ul li a{
-    color: rgb(255, 255, 255);
-    font-weight: 1000;
-    font-size: 18px;
-    text-decoration: none;
-    position: relative;
-    top: 36px;
-    left: 1px;
-}
-
-/*hr Menu*/
-b hr {
-    position: relative;
-    width: 197px;
-    top: -140px;    
-}
-
-.hamburger {
-    display: none;
-    cursor: pointer;
-    z-index: 4;
-}
-
-.bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    position: relative;
-    left: 180px;
-    top: -15px;
-    -webkit-transition: all 0.3 ease-in-out;
-    transition: all 0.3 ease-in-out;
-    background-color: white;
-}
-
-@media(max-width:768px) {
-    .hamburger {
-        display: block;
-}
-    .hamburger.active .bar:nth-child(2) {
-        opacity: 0;
-}
-    .hamburger.active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-}
-    .hamburger.active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-}
-}
-/*menu*/
-.nav-menu {
-    z-index: 4;
-    position: fixed;
-    left: 608px;
-    top: 48px;
-    width: 160px;
-    height: 24.8%;
-    gap: 0;
-    border-radius: 5%;
-    flex-direction: column;
-    background-image: url(image/Anime\ Menu.jpg);
-    background-size: 500px;
-    transition: 1.5s;
-}
-
-.nav-item {
-    margin: 40px 0;
-    list-style: none;
-}
-
-.nav-menu.active {
-    left: 107px;
-}
-
-body {
-    background-color: black;
-}
-
-section {
-    background-size: 10px;
-}
-
-body{
-    background-image: url(image/redb.jpg);
-    background-size: 410px;
-    background-repeat: no-repeat;
-}
-
-h1 {
-    color: white;
-    font-size: 25px;
-    position: relative;
-    top: -6px;
-    text-align: center;
-}
-
-span3 {
-    position: relative;
-    right: 150px;
-    top: 45px;
-    display: block;
-    z-index: 2;
-    position: absolute;
-}
-
-h2 {
-    color: rgb(0, 238, 255);
-    text-align: center;
-    position: relative;
-    top: 50px;
-}
-
-hr {
-    width: 104%;
-    position: relative;
-    right: 10px;
-    top: 10px;
-}
-
-h3 {
-    color: white;
-    font-size: 22px;
-    text-align: center;
-    position: relative;
-    top: 15px;
-}
-
-h4 {
-    color: white;
-    text-align: center;
-    font-size: 21px;
-    position: relative;
-    top: 8px;
-}
-
-#link{
-    display: block;
-    width: 222px;
-    padding: 12px 10px;
-    border: 1px solid #212121;
-    background-color: #fff;
-    border-radius: 5px;
-    font-size: 15px;
-    position: relative;
-    left: 36px;
-    top: 8px;
-    overflow-x: scroll;
-}
-#link::-webkit-scrollbar{
-    display: none;
-}
-
-#copy-btn{
-    background-color: #000000;
-    color: #ffffff;
-    padding: 12px 20px;
-    position: relative;
-    top: -24px;
-    left: 286px;
-    border-radius: 5px;
-    font-size: 18px;
-    cursor: pointer;
-}
-
-h5 {
-    color: white;
-    font-size: 21px;
-    text-align: center;
-    position: relative;
-    top: -20px;
-}
-
+</script>
+<h5>Tham Gia Nhóm</h5>
+</body>
+</html>
