--- a/Web Key Spam SmS/webkey.css
+++ b/Web Key Spam SmS/webkey.css
@@ -145,7 +145,7 @@ body {
 
 body{
     background-image: url(image/redb.jpg);
-    background-size: 410px;
+    background-size: 410px 555px;
     background-repeat: no-repeat;
 }
 
