--- a/style.css
+++ b/style.css
@@ -196,18 +196,20 @@ h1 {
     color: white;
     z-index: 3;
     font-size: 23px;
-    position: relative;
-    top: -490px;
+    position: absolute;
+    text-align: center;
+    top: 6px;
 }
 
 span3 {
-    position: relative;
-    right: 150px;
-    top: 45px;
-    color: #ff0000;
+    color: #ff0202;
     display: block;
     z-index: 2;
     position: absolute;
+    text-align: center;
+    right: 138px;
+    top: 45px;
+
 }
 
 hr {
@@ -223,7 +225,7 @@ h4 {
     font-size: 20px;
     z-index: 2;
     position: absolute;
-    left: 100.4px;
+    left: 106px;
     top: 111px;
 }
 
@@ -258,7 +260,7 @@ h41 {
     font-weight: 999;
     z-index: 2;
     position: absolute;
-    left: 107.5px;
+    left: 113px;
     top: 260px;
 }
 
@@ -295,7 +297,7 @@ h5 {
     position: absolute;
     font-size: 20px;
     top: 346px;
-    left: 152.7px;
+    left: 158px;
 }
 
 input2 {
@@ -331,7 +333,7 @@ h6 {
     position: absolute;
     font-size: 20px;
     top: 452px;
-    left: 132.4px;
+    left: 138px;
 }
 
 input3 {
@@ -378,7 +380,7 @@ h7 {
     font-size: 23px;
     font-weight: 999;
     top: 637px;
-    left: 109.5px;
+    left: 111px;
 }
 
 input4 {
@@ -393,10 +395,12 @@ input4 {
     background: linear-gradient(45deg,#0ce39a, #69007f,#fc0987);
     border-radius: 15px;
 }
-
+.button {
+    align-items: center;
+}
 input4{
     position: relative;
-    left: 47px;
+    left: 50px;
     top: 25px;
 }
 
@@ -409,10 +413,11 @@ input4{
     max-width: 50%;
 }
 
-/* Esign*/
+/*Esign*/
 
 input6 {
     display: block;
+    z-index: 1;
     position: absolute;
     width: 86.3px;
     height: 48px;
@@ -426,8 +431,8 @@ input6 {
 
 input6{
     position: relative;
-    right: 120px;
-    top: -18px;
+    right: 170px;
+    top: 187px;
 }
 
 .item-media2 .app-icon {
@@ -440,10 +445,11 @@ input6{
     border-radius: 20%;
 }
 
-/* Scarlet*/
+/*Scarlet*/
 
 input7 {
     display: block;
+    z-index: 2;
     position: absolute;
     width: 86.3px;
     height: 48px;
@@ -457,8 +463,8 @@ input7 {
 
 input7{
     position: relative;
-    left: 117px;
-    top: -66px;
+    right: 16px;
+    top: 187px;
 }
 
 .item-media3 .app-icon {
@@ -486,8 +492,8 @@ h11 {
     position: absolute;
     font-size: 21px;
     font-weight: 999;
-    top: 71px;
-    left: 4.5px;
+    top: 760px;
+    right: 167px;
 }
 
 input5 {
@@ -504,27 +510,27 @@ input5 {
 }
 
 input5{
-    position: relative;
-    left: -4.8px;
-    top: 25px;
+    position: absolute;
+    left: -3.9px;
+    top: 48px;
 }
 
 i5 {
     z-index: 2;
     color: white;
     position: relative;
-    right: -25.5px;
+    right: -25px;
     top: 6.5px;
 }
 
-h12 {
+h12{
     color: white;
     z-index: 2;
     position: absolute;
     font-size: 25px;
     font-weight: 999;
-    top: 212px;
-    left: -1px;
+    top: 905px;
+    left: 160px;
 }
 
 i6 {
@@ -535,7 +541,7 @@ i6 {
 
 .icon1 {
     position: relative;
-    top: 10px;
+    top: 16px;
     right: 30px;
     height: auto;
     max-width: 1.3em;
@@ -549,7 +555,7 @@ i6 {
 
 .icon2 {
     position: relative;
-    top: -28px;
+    top: -22px;
     left: 18px;
     height: auto;
     max-width: 1.9em;
@@ -563,7 +569,7 @@ i6 {
 
 .icon3 {
     position: relative;
-    top: -68px;
+    top: -62px;
     left: 80px;
     height: auto;
     max-width: 1.3em;
@@ -575,34 +581,22 @@ i6 {
     margin-inline-start: 1px;
 }
 
-h10 {
-    color: red;
-    position: relative;
-    font-weight: 700;
-}
-
 a {
     text-decoration: none;
 }
 
 p {
-    position: absolute;
-    left: -123px;
-    top: -12px;
-}
-
-p1 {
-    position: absolute;
-    left: -150px;
-    top: 28px;
+    position: relative;
+    left: 27px;
+    top: 45px;
 }
 
 footer {
     color: white;
     z-index: 2;
     position: relative;
-    top: 300px;
-    left: 97px;
+    top: 450px;
+    left: 57px;
     font-size: 16px;
 }
 
